--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+Django = "^4.2.6"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^6.1.0"
+pylint = "^3.0.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
