--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ Django = "^4.2.6"
 [tool.poetry.dev-dependencies]
 flake8 = "^6.1.0"
 pylint = "^3.0.2"
+black = "^23.10.1"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
