Refactor docker. Update poetry.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,29 @@
-version: '3.10'
-
+version: '3.8'
 
 services:
-  db_postgres:
-  image: postgres:16
-  container_name: db_postgres
-  volumes:
-    - ~/pg_data/educational_platform:/var/lib/postgres/data
-  env_file:
-    - .env
-ep_project:
-  # build:
-  #   dockerfile: dockerfile
-  #   context: .
-  image: ep_project:latest
-  container_name: ep_project
-  depends_on:
-    - db_postgres
-  volumes:
-    - static_volume:/educational_platform/static
-  env_file:
-    - .env
-  command: >
-    sh -c "python3 manage.py runserver 0.0.0.0:8000"
-
-
-nginx:
-  build:
-    dockerfile: dockerfile
-    context: .
-    container_name: ep_nginx
-    image: ep_nginx
-    volumes:
-      - static_volume:/educational_platform/static
-    depends_on:
-      - ep_project
-    ports:
-      -"8000"
-
-
-
-
-
-
-
-# services:
-#   platform-app:
-#     build: 
-#     context: .
-#   ports:
-#     -"8000"
-#   volumes:
-#     - ./educational_platform:/educational_platform
-#   env_file:
-#     - .env
-  
-#   command: >
-#     sh -c "python3 manage.py runserver 0.0.0.0:8000"
-
-
+  db:
+      image: postgres:latest
+      container_name: db_postgres
+      volumes:
+        - /educational_platform_db/postgres:/var/lib/postgres/data
+      expose:
+        - 5432
+      ports:
+        - "5432:5432"
+      env_file:
+        - .env
+  web:
+      container_name: backend
+      build:
+         dockerfile: Dockerfile
+         context: ././
+      volumes:
+        - .:/educational_platform
+      expose:
+        - 8000
+      ports:
+        - "8000:8000"
+      env_file:
+        - .env
+      depends_on:
+        - db
