--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.2.6"
+python-dotenv = "1.0.0"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.1.0"
