--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 Django = "^4.2.6"
 python-dotenv = "1.0.0"
 psycopg2 = "^2.9.9"
+pre-commit = "^3.5.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.1.0"
