--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2 = "^2.9.9"
 pre-commit = "^3.5.0"
 pillow = "^10.1.0"
 django-ckeditor = "^6.7.0"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.1.0"
