--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pre-commit = "^3.5.0"
 pillow = "^10.1.0"
 django-ckeditor = "^6.7.0"
 djangorestframework = "^3.14.0"
+djangorestframework-simplejwt = "^5.3.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.1.0"
